Cleaned up code, added support for Linux, and JDK/JRE11